--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,9 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# =========================
+# Build artifacts
+# =========================
+CSharpMonad/lib/*.dll
+CSharpMonad/lib/*.mdb
