--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,29 @@
 version: 1.0.{build}
 
+os: Windows Server 2012
+
 image: Visual Studio 2015
 
-before_build:
-  - nuget restore CSharpMonad.sln
+init:
+  - git config --global core.autocrlf input
   - choco install curl
+
+shallow_clone: true
+
+clone_depth: 1
+
+install:
+  - nuget restore CSharpMonad.sln
 
 build:
   project: CSharpMonad.sln
   verbosity: minimal
 
 deploy_script:
-  - curl ifconfig.io
+  - curl --silent ifconfig.io
 
 configuration:
   - Release
-  - Debug
 
 test: off
 
